; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_speedhq.c_decode_dc_le.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_speedhq.c_decode_dc_le.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@ff_dc_lum_vlc_le = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@DC_VLC_BITS = common dso_local global i32 0, align 4
@ff_dc_chroma_vlc_le = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"invalid dc code at\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @decode_dc_le to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_dc_le(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = icmp eq i32 %11, 3
  br i1 %12, label %13, label %18

13:                                               ; preds = %10, %2
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ff_dc_lum_vlc_le, i32 0, i32 0), align 4
  %16 = load i32, i32* @DC_VLC_BITS, align 4
  %17 = call i32 @get_vlc2(i32* %14, i32 %15, i32 %16, i32 2)
  store i32 %17, i32* %6, align 4
  br label %23

18:                                               ; preds = %10
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ff_dc_chroma_vlc_le, i32 0, i32 0), align 4
  %21 = load i32, i32* @DC_VLC_BITS, align 4
  %22 = call i32 @get_vlc2(i32* %19, i32 %20, i32 %21, i32 2)
  store i32 %22, i32* %6, align 4
  br label %23

23:                                               ; preds = %18, %13
  %24 = load i32, i32* %6, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %23
  %27 = load i32, i32* @AV_LOG_ERROR, align 4
  %28 = call i32 @av_log(i32* null, i32 %27, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  store i32 65535, i32* %3, align 4
  br label %39

29:                                               ; preds = %23
  %30 = load i32, i32* %6, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %33, label %32

32:                                               ; preds = %29
  store i32 0, i32* %7, align 4
  br label %37

33:                                               ; preds = %29
  %34 = load i32*, i32** %4, align 8
  %35 = load i32, i32* %6, align 4
  %36 = call i32 @get_xbits_le(i32* %34, i32 %35)
  store i32 %36, i32* %7, align 4
  br label %37

37:                                               ; preds = %33, %32
  %38 = load i32, i32* %7, align 4
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %37, %26
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @get_vlc2(i32*, i32, i32, i32) #1

declare dso_local i32 @av_log(i32*, i32, i8*) #1

declare dso_local i32 @get_xbits_le(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
